The current maintainer of this library is the
RIPE NCC information services department.

You can reach us at ris@ripe.net.

2009-07-29 Erik Romijn <eromijn@ripe.net>
	* Fixing incorrect as path length count in case of AS_(CONFED_)SEQUENCE
	  (issue IS-141)
	

2009-07-27 Ruben van Staveren <ruben@ripe.net>
	* Enabled extra compiler warnings
	* Fixed some potentially unsafe constructs (pointer arithmetic,
	  signed/unsigned comparisons, shadowed variables) 

2009-07-22 Ruben van Staveren <ruben@ripe.net>
	* Fixed a case where during -M dumps aspaths where printed for entries that
	  did not have their BGP_ATTR_AS_PATH flag set. Such entries will now print
	  an empty field. Reported by many people.
	* Changed -fpic to -fPIC: newer gccs coerce -fpic to -fPIC any way.
	  difference is that with -fpic the global offset table has a maximum size
	* Fixed nit in getopt handling
	* Added distclean target
	* In bgpdump_free_mp_info(), set pointers to NULL after freeing them.
	  Reported by Robert Kisteleki <robertk@ripe.net>
	* Default output for 32bit ASN numbers is now ASPLAIN

2008-02-01 Erik Romijn <eromijn@ripe.net>
	* Fixed a few memleaks based on a patch from
	  Antony Antony <antony@phenome.org>
	  (Ticket NCC#2007064868)
	* Fixed compiling with --disable-ipv6 based on a patch
	  from Haniff Rahbari <hnrahbari@yahoo.com>
	  (Ticket NCC#2007111325)
	* Fixed a few warnings, mostly based on a patch from
	  Bruno Quoitin <bruno.quoitin@uclouvain.be>
	  (Ticket NCC#2007123069)
	* Made bgpdump's usage message nicer

2007-06-21 Erik Romijn <eromijn@ripe.net>
    * Fixed incorrect dump time display for some cases

2007-06-06 Erik Romijn <eromijn@ripe.net>
    * Set proper compile options to work on Mac OS X 10.4

2007-06-01 Erik Romijn <eromijn@ripe.net>
    * Fixed several bugs in 64-bit PC support and added
	  bzip2 support, credit goes to
	  Bernhard Tellenbach <betellen@tik.ee.ethz.ch>
	  for providing patches.
	* Fixed incorrect IPv6 nexthops in -M/-m output
